force-app/main/default/objects/CustomAddress__c/CustomAddress__c.object-meta.xml
<CustomObject>
    <label>Custom Address</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Custom Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Addresses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>