force-app/main/default/objects/CustomAddress__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JJDSF-1016 Populated by Trigger</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Addresses</relationshipLabel>
    <relationshipName>CustomAddresses</relationshipName>
    <type>Lookup</type>
</CustomField>