force-app/main/default/objects/CustomAddress__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Complete physical address using Salesforce compound address format. Includes street, city, state/province, postal code, and country fields.</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>