force-app/main/default/objects/CustomAddress__c/fields/AddressType__c.field-meta.xml
<CustomField>
    <fullName>AddressType__c</fullName>
    <description>Defines the purpose of this address record. &apos;Billing&apos; for invoices, &apos;Shipping&apos; for deliveries, &apos;Mailing&apos; for correspondence, and &apos;Misc&apos; for other uses. Billing is set as default.</description>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
                <default>true</default>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>