force-app/main/default/objects/CustomAddress__c/fields/ERPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPCustomerNumber__c</fullName>
    <description>Customer identifier from external ERP system used for address synchronization (e.g., SAP customer number).</description>
    <label>ERP Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>