force-app/main/default/objects/CustomAddress__c/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this is the primary address for its type. Only one address per type should be marked as primary.</description>
    <label>IsPrimary</label>
    <type>Checkbox</type>
</CustomField>