force-app/main/default/objects/CustomAddress__c/fields/IsValid__c.field-meta.xml
<CustomField>
    <fullName>IsValid__c</fullName>
    <description>JJDSF-1016</description>
    <formula>ValidFrom__c &lt;= TODAY() &amp;&amp; ValidTo__c &gt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Valid?</label>
    <type>Checkbox</type>
</CustomField>