force-app/main/default/objects/CustomAddress__c/fields/LookupType__c.field-meta.xml
<CustomField>
    <fullName>LookupType__c</fullName>
    <description>Specifies the object type this address is related to (e.g., &apos;Account&apos;, &apos;Contact&apos;). Used in conjunction with RelatedId.</description>
    <label>Lookup Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>