force-app/main/default/objects/CustomAddress__c/fields/RelatedId__c.field-meta.xml
<CustomField>
    <fullName>RelatedId__c</fullName>
    <description>The Salesforce ID of the record (Account, Contact, etc.) this address belongs to, as specified by LookupType.</description>
    <label>Related Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>