force-app/main/default/objects/CustomAddress__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <description>The date when this address becomes active. Used for address history tracking and future-dated changes.</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>