force-app/main/default/objects/CustomAddress__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>The date when this address expires or becomes inactive. Blank indicates currently active address.</description>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>