force-app/main/default/objects/CustomAddress__c/validationRules/PostalCodeIsMandatoryField.validationRule-meta.xml
<ValidationRule>
    <fullName>PostalCodeIsMandatoryField</fullName>
    <active>true</active>
    <errorConditionFormula>Address__PostalCode__s == null || Address__PostalCode__s == &apos;&apos;</errorConditionFormula>
    <errorDisplayField>Address__PostalCode__s</errorDisplayField>
    <errorMessage>Postal Code is mandatory field.</errorMessage>
</ValidationRule>