force-app/main/default/objects/CustomAddress__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AddressType__c</columns>
    <columns>ERPCustomerNumber__c</columns>
    <columns>ERPLastSyncAt__c</columns>
    <columns>ExternalID__c</columns>
    <columns>LookupType__c</columns>
    <columns>Address__CountryCode__s</columns>
    <columns>Address__City__s</columns>
    <columns>Address__Street__s</columns>
    <columns>Address__PostalCode__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>